# docs/swagger.json
@@ -75,7 +75,7 @@
                 "tags": [
                     "course"
                 ],
-                "summary": "删除学生,需用户登录，当前用户需要是课程创建者",
+                "summary": "删除课程,需用户登录，当前用户需要是课程创建者",
                 "parameters": [
                     {
                         "type": "integer",
@@ -216,6 +216,40 @@
                         }
                     }
                 }
+            }
+        },
+        "/img": {
+            "post": {
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Img"
+                ],
+                "summary": "上传图片",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "选择上传文件",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ]
+            }
+        },
+        "/img/{name}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Img"
+                ],
+                "summary": "获取图片"
             }
         },
         "/terms": {
@@ -513,6 +547,11 @@
     "definitions": {
         "course.courseData": {
             "type": "object",
+            "required": [
+                "name",
+                "season",
+                "year"
+            ],
             "properties": {
                 "info": {
                     "type": "string"
@@ -530,14 +569,11 @@
         },
         "course.studentsData": {
             "type": "object",
+            "required": [
+                "accounts"
+            ],
             "properties": {
                 "accounts": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "names": {
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -547,6 +583,10 @@
         },
         "entity.CourseResp": {
             "type": "object",
+            "required": [
+                "season",
+                "year"
+            ],
             "properties": {
                 "cid": {
                     "type": "integer"
@@ -567,6 +607,10 @@
         },
         "entity.Term": {
             "type": "object",
+            "required": [
+                "season",
+                "year"
+            ],
             "properties": {
                 "season": {
                     "type": "integer"
